[package]
name = "nom-cheatsheet"
version = "0.1.0"
authors = ["Rogier 'DocWilco' Mulhuijzen <github@bsdchicks.com>"]
edition = "2021"

[dependencies]
comrak = "0.29.0"
nom = "7.1.3"
nom-cheatsheet-shared = { path = "nom-cheatsheet-shared" }
syntect = "5.2.0"

[build-dependencies]
nom = "7.1.3"
nom-cheatsheet-shared = { path = "nom-cheatsheet-shared" }
itertools = "0.13.0"

[workspace]
members = ["nom-cheatsheet-shared"]
